--- a/_config.yml
+++ b/_config.yml
@@ -1,75 +1,60 @@
-# The Site Configuration
-
-# Import the theme
 theme: jekyll-theme-chirpy
 
-# The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
-# If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
-# otherwise, the layout language will use the default value of 'en'.
-lang: en
+# Helpful > http://www.lingoes.net/en/translator/langcode.htm
+lang: en-GB
 
-# Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+# Helpful > https://kevinnovak.github.io/Time-Zone-Picker
+timezone: Europe/London
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
-# ↓ --------------------------
 
-title: Chirpy # the main title
+title: Shuppin's Blog
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: A technical blog on graphics, language dev and more.
 
-description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+description: >-
+  A technical blog on graphics, language dev and more.
 
-# Fill in the protocol & hostname for your site.
-# e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+# The protocol & hostname for the site.
+url: "https://shuppin.github.io"
 
 github:
-  username: github_username # change to your github username
-
-twitter:
-  username: twitter_username # change to your twitter username
+  username: Shuppin
 
 social:
-  # Change to your full name.
-  # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  # name is displayed as the default author of the posts and the copyright owner in the Footer
+  name: Shuppin
+  email: shuppin93@outlook.com
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://github.com/Shuppin
 
 # Site Verification Settings
-webmaster_verifications:
-  google: # fill in your Google verification code
-  bing: # fill in your Bing verification code
-  alexa: # fill in your Alexa verification code
-  yandex: # fill in your Yandex verification code
-  baidu: # fill in your Baidu verification code
-  facebook: # fill in your Facebook verification code
+# webmaster_verifications:
+#   google: # fill in your Google verification code
+#   bing: # fill in your Bing verification code
+#   alexa: # fill in your Alexa verification code
+#   yandex: # fill in your Yandex verification code
+#   baidu: # fill in your Baidu verification code
+#   facebook: # fill in your Facebook verification code
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
 
 # Web Analytics Settings
-analytics:
-  google:
-    id: # fill in your Google Analytics ID
-  goatcounter:
-    id: # fill in your GoatCounter ID
-  umami:
-    id: # fill in your Umami ID
-    domain: # fill in your Umami domain
-  matomo:
-    id: # fill in your Matomo ID
-    domain: # fill in your Matomo domain
-  cloudflare:
-    id: # fill in your Cloudflare Web Analytics token
+# analytics:
+#   google:
+#     id: # fill in your Google Analytics ID
+#   goatcounter:
+#     id: # fill in your GoatCounter ID
+#   umami:
+#     id: # fill in your Umami ID
+#     domain: # fill in your Umami domain
+#   matomo:
+#     id: # fill in your Matomo ID
+#     domain: # fill in your Matomo domain
+#   cloudflare:
+#     id: # fill in your Cloudflare Web Analytics token
 
 # Pageviews settings
 pageviews:
@@ -93,14 +78,14 @@ theme_mode: # [light | dark]
 # will be added to all media resources (site avatar, posts' images, audio and video files) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-cdn:
+# cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: "assets/caty.jpg"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: # string, local or CORS resources
+social_preview_image: "assets/caty.jpg" # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
 toc: true
