--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description: >-
   A technical blog on graphics, language dev and more.
 
 # The protocol & hostname for the site.
-url: "https://shuppin.github.io"
+url: https://shuppin.github.io
 
 github:
   username: Shuppin
@@ -81,11 +81,11 @@ theme_mode: # [light | dark]
 # cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "../../assets/img/avatar.jpg"
+avatar: /assets/img/avatar.jpg
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: "../../assets/img/avatar.jpg" # string, local or CORS resources
+social_preview_image: assets/img/avatar.jpg # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
 toc: true
